RESOLVED FIXED252866
REGRESSION (260675@main): [ macOS, iOS ] 2 x fast/text/glyph-display-list tests are a constant failure.
https://bugs.webkit.org/show_bug.cgi?id=252866
Summary REGRESSION (260675@main): [ macOS, iOS ] 2 x fast/text/glyph-display-list tes...
Bri Harris
Reported 2023-02-23 15:04:26 PST
2 x fast/text/glyph-display-list tests: fast/text/glyph-display-lists/glyph-display-list-svg-unshared.html fast/text/glyph-display-lists/glyph-display-list-colr-unshared.html is a constant text failure on Debug only for macOS and iOS 16. HISTORY: https://results.webkit.org/?suite=layout-tests&suite=layout-tests&test=fast%2Ftext%2Fglyph-display-lists%2Fglyph-display-list-svg-unshared.html&test=fast%2Ftext%2Fglyph-display-lists%2Fglyph-display-list-colr-unshared.html I was able to reproduce this failure ToT as follows: run-webkit-tests fast/text/glyph-display-lists/glyph-display-list-svg-unshared.html fast/text/glyph-display-lists/glyph-display-list-colr-unshared.html I also ran each test individually with both continuing to fail. DIFF TEXT: @@ -1 +1,2 @@ -PASS: Display lists do not match. +FAIL: Display lists match but shouldn't. +
Attachments
Patch (5.94 KB, patch)
2023-03-17 08:35 PDT, alan
no flags
Patch (6.97 KB, patch)
2023-03-18 13:27 PDT, alan
no flags
Patch (10.23 KB, patch)
2023-03-24 13:01 PDT, alan
no flags
Patch (10.23 KB, patch)
2023-03-24 17:48 PDT, alan
no flags
[fast-cq]Patch (11.04 KB, patch)
2023-03-24 21:23 PDT, alan
no flags
[fast-cq]Patch (11.04 KB, patch)
2023-03-25 06:41 PDT, alan
ews-feeder: commit-queue-
Bri Harris
Comment 1 2023-02-23 15:12:29 PST
I did attempt to find multiple builds to identify a regression point; however there is a huge gap between the failure points and what's available to test on. I did verify the test fails on a 260686@main build
Radar WebKit Bug Importer
Comment 2 2023-02-23 15:12:51 PST
Ryan Haddad
Comment 3 2023-02-23 15:37:37 PST
This is almost certainly related to https://commits.webkit.org/260675@main
alan
Comment 4 2023-02-23 15:41:46 PST
They should probably go to the pile of bug 252668...but I'd rather have Myles look at it first.
Ryan Haddad
Comment 5 2023-03-02 15:26:49 PST
*** Bug 253207 has been marked as a duplicate of this bug. ***
Ryan Haddad
Comment 6 2023-03-03 10:48:06 PST
EWS
Comment 7 2023-03-03 11:46:34 PST
Test gardening commit 261156@main (8e0278908e4a): <https://commits.webkit.org/261156@main> Reviewed commits have been landed. Closing PR #11010 and removing active labels.
alan
Comment 8 2023-03-17 08:35:00 PDT
alan
Comment 9 2023-03-18 13:27:14 PDT
alan
Comment 10 2023-03-24 13:01:05 PDT
alan
Comment 11 2023-03-24 17:48:03 PDT
alan
Comment 12 2023-03-24 21:23:54 PDT
Created attachment 465582 [details] [fast-cq]Patch
EWS
Comment 13 2023-03-25 06:21:20 PDT
Commit message contains (OOPS!) and no reviewer found, blocking PR #None
alan
Comment 14 2023-03-25 06:41:20 PDT
Created attachment 465588 [details] [fast-cq]Patch
EWS
Comment 15 2023-03-25 07:14:11 PDT
Committed 262113@main (b9bac132dda7): <https://commits.webkit.org/262113@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 465588 [details].
Note You need to log in before you can comment on or make changes to this bug.