REGRESSION (260675@main): [ macOS, iOS ] 2 x fast/text/glyph-display-lis t tests are a constant failure. https://bugs.webkit.org/show_bug.cgi?id=252866 <rdar://105854585>

Reviewed by Myles C. Maxfield.

Accessing glyph data initiates font loading for characters that are currently not available (when policy allows).
260675@main changed the timing of reading glyph data by moving it from tree construction over to layout.
This patch restores previous behavior -for details see webkit.org/b/252668.

* LayoutTests/TestExpectations:
* LayoutTests/imported/w3c/web-platform-tests/css/css-fonts/fallback-remote-to-data-url-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-fonts/font-display/font-display-failure-fallback-expected.txt:
* LayoutTests/platform/mac-wk2/TestExpectations:
* Source/WebCore/rendering/RenderText.cpp: insertedIntoTree is also a candidate, but that my trigger redundant reading when detach/re-attach happens.
(WebCore::initiateFontLoadingByAccessingGlyphData):
(WebCore::RenderText::styleDidChange):

Canonical link: https://commits.webkit.org/262113@main